--- a/第一章*如何搭建环境.md
+++ b/第一章*如何搭建环境.md
@@ -8,3 +8,37 @@
 一般选择免费的Community版本，当然您也可以选择购买Ultimate版本,Community版本其实已经符合我们使用的需求，当然
 作者使用的是Ultimate版本在此教学。
 ![1-01](images/1-01.png)
+
+2.打开idea后，我们这里使用[maven](https://maven.apache.org/)项目进行构建,这里使用[jdk1.8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)，为这些选项即可
+![1-02](images/1-02.png)
+
+3.输入完groupId和artifactId(这些是自定义的)，创建项目后，我们会进入这个界面,这里我artifactId为MyFirstPlugin
+![1-03](images/1-03.png)
+
+4. 在pom.xml中加入以下标签可以导入
+
+```java
+<distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>nukkitx-releases</name>
+            <url>https://repo.nukkitx.com/release</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>nukkitx-snapshots</name>
+            <url>https://repo.nukkitx.com/snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>nukkitx-repo</id>
+            <name>nukkitx-snapshot</name>
+            <url>https://repo.nukkitx.com/snapshot</url>
+        </repository>
+    </repositories>
+```
+
+如图所示
+![1-04](images/1-04.png)
