--- a/第一章*如何搭建环境.md
+++ b/第一章*如何搭建环境.md
@@ -17,7 +17,7 @@
 
 4. 在pom.xml中加入以下标签可以导入
 
-```java
+```xml
 <distributionManagement>
         <repository>
             <id>releases</id>
@@ -42,3 +42,6 @@
 
 如图所示
 ![1-04](images/1-04.png)
+
+- 参考文献 [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
+- 
