开启第二章，第一章结束

--- a/第一章*如何搭建环境.md
+++ b/第一章*如何搭建环境.md
@@ -146,9 +146,78 @@ public class Example extends PluginBase {
 }
 ```
 
-    
+三. 调试插件
 
+其实调试插件很简单，这里我们需要这几个过程
 
+- 编译,打包
+- 部署
+- 运行加载
+- 调试
+
+1. 编译打包很简单,我们使用ideaIDE可以轻松的实现maven打包
+
+PS:当然在打包之前，建议在pom.xml里加下这个，可以解决idea的编译器版本
+无效等一系列问题
+```xml
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.2.2</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+```
+如图所示添加这些标签
+![1-08](images/1-08.png)
+如图中按钮所示(不要在意其中的项目)
+![1-06](images/1-06.png)
+之后我们找到其中的package,点击即可
+![1-07](images/1-07.png)
+如图所示，出现"BUILD SUCCESS"我们就成功了
+![1-09](images/1-09.png)
+一般的，目标jar包会产生在target文件夹中
+![1-10](images/1-10.png)
+2. 部署
+
+之后把打包好的合法插件丢入plugins文件里就完美运行了，这里将不做图示
+这就是插件部署的过程。
+3. 运行加载
+
+如果出现了加载$(您的插件名字)成功之类的字样，说明您的插件成功了。
+
+4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
+进行再次调试，修改，打包等
 
 参考文献
 - [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
