--- a/第一章*如何搭建环境.md
+++ b/第一章*如何搭建环境.md
@@ -221,6 +221,8 @@ PS:当然在打包之前，建议在pom.xml里加下这个，可以解决idea的
 4. 之后进入游戏测试您的插件是否符合您的需求，根据您插件出现的各种问题
 进行再次调试，修改，打包等
 
+[下一章](第二章*插件要素.md)
+
 参考文献
 - [[教程] [官方] 使用Maven配置Nukkit开发环境的方法（部分）](https://www.mcbbs.net/thread-706178-1-1.html)
 - [Nukkit插件从0开始](https://www.cnblogs.com/xtypr/p/nukkit_plugin_start_from_0.html)
