修改一个语句漏洞

--- a/第一章*如何搭建环境.md
+++ b/第一章*如何搭建环境.md
@@ -5,7 +5,7 @@
 
 一. 环境搭建
 
-搭建环境是我们使用nukkit的第一步，它虽然不是必要的一步，但是是我们进行简便开发的第一步。
+搭建环境是我们使用nukkit的第一步，虽然其中下载IDE不是必要的一步，但是是我们进行简便开发的第一步。
 
 
 1. 首先上[idea官网](https://www.jetbrains.com/idea/download/#section=mac)下载我们所需要的版本，我们
