第三章开坑

--- a/第二章*插件要素.md
+++ b/第二章*插件要素.md
@@ -1,9 +1,11 @@
-[上一章](第一章*如何搭建环境.md) [下一章]()
+[上一章](第一章*如何搭建环境.md) [下一章](第三章*如何编写监听器.md)
 
-# 第二章 插件要素
+# 第一部分 第二章 插件要素
 参与编写者: MagicLu550
 #### 建议学习时间: 50分钟
-##### 学习要点: 了解nukkit的项目结构
+##### 学习要点: 了解nukkit的项目结构，认识一些普通组件的定义和注册
+
+插件要素这章会概括性的介绍nukkit的一些主要组件，后面的章节将会对他们系统的介绍。
 
 所有的插件式编程都有它的一套运行标准，如maven插件,PocketMine插件，以及我们的nukkit插件等。
 
@@ -179,6 +181,26 @@ public class Example extends PluginBase{
 
 3.计时器部分我们将在后面讲解，它的体系较复杂一些
 
+计时器主要形同java的Runnable，线程池等等，他们本质也是实现多线程。
+也是开发者使用最广泛的一类组件。
+
 4. 如何写plugin.yml
+    plugin.yml第一章提到过，plugin.yml最主要的是
+    
+    ```yaml
+     name: FirstPlugin             
+     main: net.noyark.www.Example  
+     version: "0.0.1"              
+     author: myName
+     api: ["1.0.8"]                
+     description: My first plugin
+    ```
+snake1999曾说: 缺少他们的插件是不被nukkit运行的。
+这些都是不能缺少的，在接下来章节中，将会系统的介绍里面常用的标签
+目前从现在的维护者知悉，api写什么其实并不重要，因为nukkit向下兼容,不像
+pocketMine一样变动很大,nukkit会淘汰掉过时的函数，不会删除，因此
+可以保证老插件运行，但值得注意的是，不代表淘汰函数会完美运行，能
+运行插件不代表不会出现bug，但这也是相对pocketMine最方便的优势了。
+
 
 [上一章](第一章*如何搭建环境.md) [下一章]()
