第三章更新

--- a/第二章*插件要素.md
+++ b/第二章*插件要素.md
@@ -101,6 +101,7 @@ public class OtherListener implements Listener {
 其实注册个命令就很简单，如何跨类等等和上面基本一样，但是主类是不能注册一个命令对象的
 (因为命令是继承Command对象)
 但是也有简便的方法
+
 第一种:
 ```java
 package net.noyark.www;
@@ -141,6 +142,18 @@ public class Example extends PluginBase{
         return true;
     }
 }
+```
+当然第一种方式，命令要真正被监听，我们还要在plugin.yml里声明
+```yaml
+permissions: #这个标签我们只写一次就ok了
+  plugin.hello:
+    description: 你好
+    default: op #权限组，后期会讲到
+commands: #这个标签我们只写一次就ok了
+  hello:
+    description: 你好
+    usage: "/hello"
+    permission: plugin.hello
 ```
 第二种是创建命令类
 这个其实不用多说，和前面一样使用
