第三章更新

--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -9,7 +9,7 @@
 
 nukkit监听器的构成: 事件监听和优先级
 
-nukkit的监听器是通过*反射(reflect)*实现的，因此基于它，开发者容易上手，且上手
+nukkit的监听器是通过 **反射(reflect)** 实现的，因此基于它，开发者容易上手，且上手
 更简便。nukkit的监听器设计形同bukkit，也易于bukkit上手
 
 nukkit声明一个事件的监听管理器是通过注解实现的，即@EventHandler
@@ -98,7 +98,7 @@ EventPriority.HIGHEST
 
 EventPriority.MONITOR
 
-而实现监听器的优先级标记是通过*枚举(Enum)*实现的
+而实现监听器的优先级标记是通过 **枚举(Enum)** 实现的
 
 优先级的目的是为了保证监听器按照顺序执行，以使得一个监听器操作完会
 进入下一个监听器继续执行，以确保执行的有序性。下一个监听器的相同操作
@@ -128,7 +128,7 @@ public class OtherListener implements Listener {
 ```
 这里的意思就是当玩家进入服务器时，就会触发PlayerJoinEvent事件，服务器会
 形成一个PlayerJoinEvent对象，并且调用先前注册的有关PlayerJoinEvent的
-EventHandler，将对象传入，这样就实现了一个*事件的调用*
+EventHandler，将对象传入，这样就实现了一个 **事件的调用**
 获取对象的内容，则通过e调用即可，我们不需要很明白它的具体细节，只需要知道，
 使用EventHandler注解的方法(且有一个Event的子类类型参数，并且它所在的监听器被注册)，
 就会在事件发生时，相应的被调用，如上文所讲，这里的代码案例就是当发生玩家加入时，
