--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -35,7 +35,7 @@ import java.lang.annotation.Target;
  * A handler can choose to ignore a cancelled event or not, that can be defined in {@link #ignoreCancelled()}.</p>
  *
  * @author MagicDroidX(code) @ Nukkit Project
- * @author null(javadoc) @ Nukkit Project
+ * @author 粉鞋大妈(javadoc) @ Nukkit Project
  * @see cn.nukkit.event.Listener
  * @see cn.nukkit.event.Event
  * @since Nukkit 1.0 | Nukkit API 1.0.0
