--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -2,7 +2,7 @@
 # 第一部分 第三章 如何编写监听器
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
-##### 学习要点: 学习如何构建一个简单的监听器
+##### 学习要点: 学习如何构建一个简单的监听器,和自己构造事件
 
 其实看一看这章，没有啥可讲的。监听器的内容很简单，很多人认识它的困难主要是概念上，
 而不是使用上。
