--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -1,4 +1,4 @@
-[上一章](第二章*插件要素.md) [下一章]()
+[上一章](第二章*插件要素.md) [下一章](第四章*如何编写命令.md)
 # 第一部分 第三章 如何编写监听器
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
@@ -242,4 +242,4 @@ public class OtherListener implements Listener {
 可以注册单个EventHandler，但不太常用，我这里也不会再过多
 阐述了，如果想了解，可以发issue，我将会添加这方面的内容
 
-[上一章](第二章*插件要素.md) [下一章]()
+[上一章](第二章*插件要素.md) [下一章](第四章*如何编写命令.md)
