修正了几个错误

--- a/第二章*插件要素.md
+++ b/第二章*插件要素.md
@@ -103,6 +103,7 @@ public class OtherListener implements Listener {
 但是也有简便的方法
 
 第一种:
+[1]
 ```java
 package net.noyark.www;
 
@@ -129,7 +130,11 @@ public class Example extends PluginBase{
         //这里返回true代表执行成功，false则不成功
         //sender 是发送命令的对象
         //command 命令对象
-        //label 命令名称，比如/hello 1 1的label为hello
+        // [1]
+        //label 是标签，如果注册命令时label为null，就会默认为命令名，label的组成是fallBackPrefix+:+label
+        //label这个地方其实也不是很懂。一般注册时都是""或者null
+        //通过源码推测label和fallBackPrefix的组合是命令的唯一标识
+        //
         //args 命令参数,比如/hello 1 2的参数为1和2,存储在数组中
         //这里使用命令通过equals
         //如何得到指令名称个人习惯原因
