--- a/第四章*如何编写命令.md
+++ b/第四章*如何编写命令.md
@@ -38,8 +38,24 @@ nukkit的命令的父类是Command，它有很多的构造方法
         this.commandParameters.put("default", new CommandParameter[]{new CommandParameter("args", CommandParamType.RAWTEXT, true)});
     }
 ```
-我们可以知道，nukkit的命令都是toLowerCase的，即小写，也就是说，命令不区分大小写，因此我们需要注意，不要
-和其他的指令名称冲突，可能会造成覆盖掉一个指令的现象。
+我们可以知道，nukkit的命令都是toLowerCase的，即小写，也就是说，命令不区分大小写。
+对于命令如何存储，服务端如何识别一个命令，我们从源码中找到以下资料:
+
+--
+
+命令的区分标识是fallBackPrefix+:+label，默认为指令的名称，一般fallBackPrefix都写""
+
+这一块知识缺点将会有其他人补充[1]
+
+代码依据 - SimpleCommandMap.java
+```
+159 private boolean registerAlias(Command command, boolean isAlias, String fallbackPrefix, String label) {
+160      this.knownCommands.put(fallbackPrefix + ":" + label, command);
+
+```
+--
+
+
 存储指令的容器是实现CommandMap接口的，即SimpleCommandMap,我们可以通过
 ```
         this.getServer().getCommandMap();
