休息一下咯

--- a/第四章*如何编写命令.md
+++ b/第四章*如何编写命令.md
@@ -78,7 +78,8 @@ Command,CommandMap有很多方法
                 第四个aliases就是指令的别名，指令可以有多个别名
         ```
         当然，也有简化的构造方法，可以根据你的需求任意调用，这里不多阐述，其他的都是为默认值
-    2.
+    2. Command的属性
+       
         
     
         
