开启第六章

--- a/第四章*如何编写命令.md
+++ b/第四章*如何编写命令.md
@@ -1,4 +1,4 @@
-[上一章](第三章*如何编写监听器.md) [下一章]()
+[上一章](第三章*如何编写监听器.md) [下一章](第五章*如何使用配置文件.md)
 # 第一部分 第四章 如何编写命令
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
@@ -207,7 +207,7 @@ public class MySimpleCommand {
     }
 }
 ```
-最终通过registerSimpleCommand注册即可.
+最终通过registerSimpleCommand注册即可.事实上是对Command的封装
         
 
-[上一章](第三章*如何编写监听器.md) [下一章]()
+[上一章](第三章*如何编写监听器.md) [下一章](第五章*如何使用配置文件.md)
