--- a/第四章*如何编写命令.md
+++ b/第四章*如何编写命令.md
@@ -2,7 +2,7 @@
 # 第一部分 第四章 如何编写命令
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
-##### 学习要点: 学习自己创建一个简易的命令
+##### 学习要点: 学习自己创建一个简易的命令,了解指令和指令映射,了解SimpleCommand的使用
 
 其实创建一个简易的命令很简单，创建的过程也不必多讲，先前我在
 [第二章](第二章*插件要素.md)已经提到了如何创建它，大家可以参考
