--- a/第五章*如何使用配置文件.md
+++ b/第五章*如何使用配置文件.md
@@ -5,6 +5,43 @@
 ##### 学习要点: 了解如何创建配置文件，了解使用SimpleConfig
 
 配置文件用于存储插件的配置信息，供用户自定义和修改，以及存储一些永久数据，我们称
-配置文件属于 **持久层**
+配置文件属于 **持久层**。
+
+nukkit提供了多种配置文件格式，如yaml,json,properties等，其中最常用的是yaml,
+我们主要讲解这个配置文件格式，其他如果想要了解，可以发送issues，我们可以补充。
+
+1. 关于yaml
+
+nukkit的yaml框架基于[snakeYaml](https://github.com/bmoliveira/snake-yaml)实现的,
+snakeYaml是一款使用广泛的yaml解析库,我们可以从它的[官网](https://yaml.org/type/index.html)了解
+他们的语法，在nukkit开发中，我们更多使用key: value的映射形式
+
+这是一个yaml的文件案例
+```yaml
+server:
+ name: 12
+ player:
+  - nihao
+  - xiaoming
+  - xiaogang
+ time:
+  year: 2019
+```
+yaml的标准语法是使用空格来划分级别，前面为键，后面为值，且值和冒号之间有空格，
+虽然yaml的语法不止如此简单，但是我们最常用的也就这些很简单的东西。
+
+yaml的数组有两个表示形式
+```yaml
+array1: ["1","2"] #yaml的注释
+array2: [1,2] #yaml不允许有重复的键
+array3:
+ - 1
+ - 2
+ - 3
+
+```
+如果还要了解其他，可以上yaml官网查看他们语法，这里只讲解这些语法
+
+2. 如何使用nukkit的配置文件库
 
 [上一章](第四章*如何编写命令.md) [下一章]()
