--- a/第五章*如何使用配置文件.md
+++ b/第五章*如何使用配置文件.md
@@ -44,4 +44,22 @@ array3:
 
 2. 如何使用nukkit的配置文件库
 
+原本的snakeYaml使用起来比较复杂，因此nukkit官方提供了简化,同一
+使用Config对象来表达和操作。
+
+使用默认的配置
+
+默认配置文件为config.yml,可以通过saveDefaultConfig()方法来实现，
+前提是你的resources下面要创建一个config.yml,这个方法会默认在
+plugins/${你的插件名字}下创建一个config.yml,并且会把resources下面的那个
+config.yml内容复制过来.
+![5-01](images/5-01.png)
+之后我们调用这个方法即可
+![5-02](images/5-02.png)
+我们这里打开一个服务器，做一个实验可以看看,插件名为FirstPlugin
+![5-03](images/5-03.png)
+我们插件被加载成功,我们看看我们的文件夹
+![5-04](images/5-04.png)
+发现.../plugins/FirstPlugin下面出现了一模一样的config.yml
+
 [上一章](第四章*如何编写命令.md) [下一章]()
