第五章完成

--- a/第五章*如何使用配置文件.md
+++ b/第五章*如何使用配置文件.md
@@ -168,4 +168,97 @@ Config.java
 ```
 我们主要使用yaml,json.properties,其他大家可以自行查询。
 
+2. get方法
+
+可以获取一个键对应的值，如
+```yaml
+hello: 11
+```
+我们可以通过get("hello")得到11
+
+get有很多类型值，如getInt等，作用显而易见
+这里建议对应的类型使用对应的get
+3. set方法
+
+可以设置一个值，比如set("hello","12"),之后调用save()，就可以把12保存到文件去了
+原来:
+```yaml
+hello: 11
+```
+后来
+```yaml
+hello: 12
+```
+
+4. load方法
+
+可以从一个配置文件中加载其中的内容，之后我们可以通过其中的get方法获得其中的内容
+load方法可以传入文件名或者输入流，要表明其中的类型等
+
+5. save方法
+
+在调用set方法后，如果要保存到硬盘，则需要调用save方法，可以实现更改文件
+
+6. exists方法
+
+返回布尔值，表示这个配置文件是否存在
+
+如何使用SimpleConfig?
+
+SimpleConfig是一种简便配置文件方式，它和之前的SimpleCommand一样，
+通过反射和注解实现，它的用法也很简单。
+它需要继承SimpleConfig类,它通过"."的形式划分节点等级
+它的默认路径也是getDataFolder()+"/"+fileName
+```java
+package net.noyark.www;
+
+
+import cn.nukkit.plugin.Plugin;
+import cn.nukkit.utils.SimpleConfig;
+
+public class MySimpleConfig extends SimpleConfig{
+
+    public MySimpleConfig(Plugin plugin, String fileName) {
+        super(plugin, fileName);
+    }
+
+    //这里在文件中表示为
+    //hello:
+    // me: 你好
+    @SimpleConfig.Path("hello.me")
+    public String string = "你好";
+    
+}
+```
+之后，我们还需要调用它。
+```java
+package net.noyark.www;
+
+import cn.nukkit.plugin.PluginBase;
+
+public class Example extends PluginBase{
+
+    private static Example plugin;
+
+    @Override
+    public void onEnable() {
+        plugin = this;
+        this.getServer().getCommandMap();
+        MySimpleConfig config = new MySimpleConfig(this,"hello.yml");
+        config.load();// 从文件中读取值到配置类,如果之前存在了这个文件，你可以通过这种方式
+                        // 读取里面的元素
+        config.save();// 保存配置类中的值到文件
+        //修改值
+        config.string ="都很好";
+        config.save();//这样即可修改
+    }
+
+    public static Example getPlugin() {
+        return plugin;
+    }
+}
+```
+
+参考文献
+- [[教程] [转载] API速报: 便于使用的 SimpleConfig 类！再也不用担心配置文件太麻烦啦](https://www.mcbbs.net/forum.php?mod=viewthread&tid=555113)
 [上一章](第四章*如何编写命令.md) [下一章]()
