添加第六章跳转链接

--- a/第五章*如何使用配置文件.md
+++ b/第五章*如何使用配置文件.md
@@ -1,4 +1,4 @@
-[上一章](第四章*如何编写命令.md) [下一章]()
+[上一章](第四章*如何编写命令.md) [下一章](第六章*如何编写plugin.yml.md)
 # 第一部分 第五章 如何编写配置文件
 参与编写者: MagicLu550
 #### 建议学习时间: 40分钟
@@ -168,4 +168,4 @@ Config.java
 ```
 我们主要使用yaml,json.properties,其他大家可以自行查询。
 
-[上一章](第四章*如何编写命令.md) [下一章]()
+[上一章](第四章*如何编写命令.md) [下一章](第六章*如何编写plugin.yml.md)
