第七章完成

--- a/第四章*如何编写命令.md
+++ b/第四章*如何编写命令.md
@@ -208,6 +208,29 @@ public class MySimpleCommand {
 }
 ```
 最终通过registerSimpleCommand注册即可.事实上是对Command的封装
-        
 
+command的用户组(这里参考自snake1999的文章)
+
+```yaml
+permissions: #这个标签我们只写一次就ok了
+  plugin.hello:
+    description: 你好
+    default: op #权限组，后期会讲到
+commands: #这个标签我们只写一次就ok了
+  hello:
+    description: 你好
+    usage: "/hello"
+    permission: plugin.hello
+```
+这里我们发现了default，这个的选项有以下几种
+
+- op，代表服务器管理员，在ops.txt中规定。
+- notop，代表除服务器管理员外的所有玩家。
+- true，代表所有玩家。
+- false，代表空集。如果某个命令对应这个权限，那就没有人能够使用这个命令（控制台除外）。
+
+大家可以根据这些选项来控制指令的使用范围了
+
+参考文献:
+- [Nukkit插件从0开始](https://www.cnblogs.com/xtypr/p/nukkit_plugin_start_from_0.html)
 [上一章](第三章*如何编写监听器.md) [下一章](第五章*如何使用配置文件.md)
