第八章完成

--- a/第五章*如何使用配置文件.md
+++ b/第五章*如何使用配置文件.md
@@ -168,4 +168,56 @@ Config.java
 ```
 我们主要使用yaml,json.properties,其他大家可以自行查询。
 
+如何实现动态内容
+
+比如一些插件可以这样做
+```yaml
+message: ${player}加入了信息
+```
+
+其实可以使用replace做到
+```java
+package net.noyark.www;
+
+import cn.nukkit.event.EventHandler;
+import cn.nukkit.event.Listener;
+import cn.nukkit.event.player.PlayerJoinEvent;
+
+
+public class OtherListener implements Listener {
+
+    @EventHandler
+    public void onPLayerJoin(PlayerJoinEvent e){
+        String message;
+        //获取到内容后...
+        e.getPlayer().sendMessage(message.replace("${player}",e.getPlayer().getName()));
+    }
+}
+```
+当然我们也可以基于反射做一个简单的解析工具
+
+```java
+class Utils{
+        String[] vals = {"player","ip"};
+        Map map = new HashMap(){
+            {
+               put("player","getName");
+               put("ip","getAddress");
+            }
+        };
+        public String translate(Event e,String message){
+            try{
+                Set<Map.Entry<String,String>> entries = map.entrySet();
+                for(Map.Entry<String,String> e1:entries){
+                    message = message.replace("${"+e1.getKey()+"}",e.getClass().getDeclaredMethod(e1.getValue()).invoke(e).toString());
+                } 
+            }catch (Exception e2){
+                e2.printStackTrace();
+            }
+            return message;
+        }
+}
+
+```
+
 [上一章](第四章*如何编写命令.md) [下一章](第六章*如何编写plugin.yml.md)
