--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -204,8 +204,10 @@ public class OtherListener implements Listener {
     }
 }
 ```
-之后注册监听器，我们就可以使用我们的事件了。
-
+之后[注册监听器](第二章*插件要素.md)，我们就可以使用我们的事件了。
+```
+    this.getServer().getPluginManager().registerEvents(new OtherListener(),this);
+```
 如何触发我们的事件？
 事件的触发则通过callEvent触发，假如，我们写一个玩家假如时，如果他的
 名字叫abc，就触发MyEvent事件
