--- a/第三章*如何编写监听器.md
+++ b/第三章*如何编写监听器.md
@@ -7,6 +7,8 @@
 其实看一看这章，没有啥可讲的。监听器的内容很简单，很多人认识它的困难主要是概念上，
 而不是使用上。
 
+注册监听器有两个步骤: 1.定义监听器 2.注册监听器
+
 nukkit监听器的构成: 事件监听和优先级
 
 nukkit的监听器是通过 **反射(reflect)** 实现的，因此基于它，开发者容易上手，且上手
