--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -5,19 +5,17 @@
 ##### 学习要点: 了解基本的事件
 
 一. **player 的事件**
- 1. 主要的基本事件
- - PlayerAchievementAwardedEvent
- - PlayerChatEvent
- - PlayerDropItemEvent
- - PlayerDeathEvent
- - PlayerItemHeldEvent
- - PlayerInteractEvent
- - PlayerInteractEntityEvent
- - PlayerJoinEvent
- - PlayerMoveEvent
- - PlayerLoginEvent
- - PlayerKickEvent
- - PlayerQuitEvent
- 2. 事件功能 
-  - 
+ - <abbr title="玩家完成成就事件<br>当玩家">`PlayerAchievementAwardedEvent`</abbr>
+ - `PlayerChatEvent`
+ - `PlayerDropItemEvent`
+ - `PlayerDeathEvent`
+ - `PlayerItemHeldEvent`
+ - `PlayerInteractEvent`
+ - `PlayerInteractEntityEvent`
+ - `PlayerJoinEvent`
+ - `PlayerMoveEvent`
+ - `PlayerLoginEvent`
+ - `PlayerKickEvent`
+ - `PlayerQuitEvent`
+
   
