--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -4,8 +4,8 @@
 #### 建议学习时间: 40分钟
 ##### 学习要点: 了解基本的事件
 
-一. **player 的事件**
- - <abbr title="玩家完成成就事件当玩家">`PlayerAchievementAwardedEvent`</abbr>
+一.  **player 的事件**
+ - <abbr title="玩家完成成就事件当玩家">PlayerAchievementAwardedEvent</abbr>
  - `PlayerChatEvent`
  - `PlayerDropItemEvent`
  - `PlayerDeathEvent`
