--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -5,17 +5,19 @@
 ##### 学习要点: 了解基本的事件
 
 一.  **player 的事件**
- - <abbr title="玩家完成成就事件当玩家">PlayerAchievementAwardedEvent</abbr>
- - `PlayerChatEvent`
- - `PlayerDropItemEvent`
- - `PlayerDeathEvent`
- - `PlayerItemHeldEvent`
- - `PlayerInteractEvent`
- - `PlayerInteractEntityEvent`
- - `PlayerJoinEvent`
- - `PlayerMoveEvent`
- - `PlayerLoginEvent`
- - `PlayerKickEvent`
- - `PlayerQuitEvent`
+1. 主要事件介绍
+ - PlayerAchievementAwardedEvent
+ - PlayerChatEvent
+ - PlayerDropItemEvent
+ - PlayerDeathEvent
+ - PlayerItemHeldEvent
+ - PlayerInteractEvent
+ - PlayerInteractEntityEvent
+ - PlayerJoinEvent
+ - PlayerMoveEvent
+ - PlayerLoginEvent
+ - PlayerKickEvent
+ - PlayerQuitEvent
+ 
 
   
