--- a/第八章*案例玩家进入信息等效果.md
+++ b/第八章*案例玩家进入信息等效果.md
@@ -1,4 +1,4 @@
-[上一章](第七章*PluginBase类.md) [下一章]()
+[上一章](第七章*PluginBase类.md) [下一章](第一章*主要的事件介绍.md)
 # 第一部分 第八章 案例课:玩家进入案例演示
 参与编写者: MagicLu550
 #### 建议学习时间: 30分钟
@@ -196,3 +196,4 @@ public class MyJoin extends PluginBase {
 这大概是这个项目的流程，很简单，但是大家可以练一练，扎实基本功，我们马上开始推入下一章
 感谢你们的支持
 
+[上一章](第七章*PluginBase类.md) [下一章](第一章*主要的事件介绍.md)
