--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -166,6 +166,10 @@
     - ThunderChangeEvent: 世界打雷事件
     - WeatherChangeEvent: 天气改变事件
 
+3. 其中的方法介绍
+
+由于时间关系，我们暂时无法写这些,可以参考[bukkit文档](https://bukkit.windit.net/javadoc/)的
+关于事件内容，几乎是一样的.后期有时间我们再做补充
 
 参考文献
 - 部分事件参考于[[教程] [原创][Wiki][NPS] NukkitX 事件大全](https://www.mcbbs.net/thread-813733-1-1.html)
