--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -4,20 +4,20 @@
 #### 建议学习时间: 40分钟
 ##### 学习要点: 了解基本的事件
 
-一.  **player 的事件**
-1. 主要事件介绍
- - PlayerAchievementAwardedEvent
- - PlayerChatEvent
- - PlayerDropItemEvent
- - PlayerDeathEvent
- - PlayerItemHeldEvent
- - PlayerInteractEvent
- - PlayerInteractEntityEvent
- - PlayerJoinEvent
- - PlayerMoveEvent
- - PlayerLoginEvent
- - PlayerKickEvent
- - PlayerQuitEvent
+1. 主要事件介绍(正在编写...)
+* player事件
+    - PlayerAchievementAwardedEvent
+    - PlayerChatEvent
+    - PlayerDropItemEvent
+    - PlayerDeathEvent
+    - PlayerItemHeldEvent
+    - PlayerInteractEvent
+    - PlayerInteractEntityEvent
+    - PlayerJoinEvent
+    - PlayerMoveEvent
+    - PlayerLoginEvent
+    - PlayerKickEvent
+    - PlayerQuitEvent
 
 2. 参考资料
 转载于[[教程] [原创][Wiki][NPS] NukkitX 事件大全](https://www.mcbbs.net/thread-813733-1-1.html)
