--- a/第三章*计时器的介绍.md
+++ b/第三章*计时器的介绍.md
@@ -15,6 +15,7 @@
 
 
 二.代码
+
 我们先来看一下nukkit的[Task](https://github.com/NukkitX/Nukkit/blob/master/src/main/java/cn/nukkit/scheduler/Task.java)类.
 
 ```java
@@ -86,7 +87,7 @@ public abstract class Task implements Runnable {
 }
 ```
 
-我们可以捕捉到几个关键信息,首先我们可以看到`onRun(#int)`方法,它是一个抽象方法并且nk开发者很贴心的写上了注释示意我们这是Task中会被运行到代码块.
+我们可以捕捉到几个关键信息,首先我们可以看到`onRun(int)`方法,它是一个抽象方法并且nk开发者很贴心的写上了注释示意我们这是Task中会被运行到代码块.
 
 还有`onCancel()`和`cancel()`方法,onCancel()内部是一个空代码块,当Task被取消的时候(被任务调度器取消或者手动调用cancel()取消都会触发),这段代码块会被调用
 
