--- a/第三章*计时器的介绍.md
+++ b/第三章*计时器的介绍.md
@@ -273,7 +273,7 @@ public class Main extends PluginBase implements Listener {
          > 小明找了个玩家小红进入服务器,小红刚进入服务器,左上角就被发了消息:"你已经玩了45分钟了,快下线休息一下眼睛吧!".
  * 使用延迟类型的计时器
      - 使用延时类型的计时器,在主类onJoin方法中填写入代码
-         > this.getServer().getScheduler().scheduleDelayedTask(new PresentationRestTask(this,event.getPlayer()),45*60*20);
+         > this.getServer().getScheduler().scheduleDelayedTask(new PresentationRestTask(this,event.getPlayer()),54000);
          > 小明找了个玩家小红进入服务器,小红刚进入服务器45分钟后,左上角才被发了消息:"你已经玩了45分钟了,快下线休息一下眼睛吧!".
  * 使用循环类型的计时器
      - 似乎这很不符合我们的常理,并且增加了很多不必要的开销
