修正拼写错误

--- a/第三章*计时器的介绍.md
+++ b/第三章*计时器的介绍.md
@@ -118,7 +118,7 @@ public class Main extends PluginBase{
 
 3.使用
 
-下面会使用到`PluginTask`类,你需要对`PlugiinTask`类的方法做一个初步的了解,以及知道它继承了Task类.
+下面会使用到`PluginTask`类,你需要对`PluginTask`类的方法做一个初步的了解,以及知道它继承了Task类.
 ```java
 package cn.nukkit.scheduler;
 
