--- a/第一章*主要的事件介绍.md
+++ b/第一章*主要的事件介绍.md
@@ -1,25 +1,9 @@
 [上一章](第八章*案例玩家进入信息等效果.md) [下一章](第二章*事件相关方法.md)
 # 第二部分 第一章 主要的事件介绍
-参与编写者: SmallasWater
+参与编写者: SmallasWater MagicLu550
 #### 建议学习时间: 40分钟
 ##### 学习要点: 了解基本的事件
 
-1. 主要事件介绍(正在编写...)
-* player事件
-    - PlayerAchievementAwardedEvent
-    - PlayerChatEvent
-    - PlayerDropItemEvent
-    - PlayerDeathEvent
-    - PlayerItemHeldEvent
-    - PlayerInteractEvent
-    - PlayerInteractEntityEvent
-    - PlayerJoinEvent
-    - PlayerMoveEvent
-    - PlayerLoginEvent
-    - PlayerKickEvent
-    - PlayerQuitEvent
-
-2. 参考资料
 转载于[[教程] [原创][Wiki][NPS] NukkitX 事件大全](https://www.mcbbs.net/thread-813733-1-1.html)
 
 - block: 方块类
